--- a/index.html
+++ b/index.html
@@ -8,34 +8,72 @@
 
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">`
-    <!-- This stylesheet is an example of how you can add your own stylesheet to customize bootstrap components. Notice how it is loaded 2nd to the required bootstrap stylesheet. This is so our stylesheet will overwrite bootstrap classes when we apply the same class but different styles to the stylsheet -->
+    <!-- own stylesheet -->
     <link rel="stylesheet" href="assets/style.css">
 
-    <title>Bootstrap Template</title>
+    <title>Bootstrap Portfolio: Ele Saltmarsh</title>
   </head>
 
   <body>
 
-    <!-- main banner -->
-    <header>
-      <h1>Ele Saltmarsh</h1>
-      <h2>Design and Layout for Web and Print </h2>
-      <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#resume">Resume</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
+    <!-- nav bar -->
+    <nav class="navbar fixed-top navbar-expand-lg bg-light">
 
-    <aside><div id = "photo"><img href="./images/blue.jpg"></img> </div></aside> 
-    
+        <div class="container-fluid">
+
+          <a class="navbar-brand" href="#">
+            <img src="./assets/images/Icon.png" width="60" height="60" class="d-inline-block align-middle" alt="ES">
+            Ele Saltmarsh
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about">About Me</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Portfolio
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#pr1">Project 1</a></li>
+                  <li><a class="dropdown-item" href="#pr2">Prject 2</a></li>
+                  <li><a class="dropdown-item" href="#pr3">Project 3</a></li>
+                  <li><a class="dropdown-item" href="#pr4">Project 4</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
+            </ul>
+
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+
+          </div>
+        </div>
+
+    </nav>
+
     <div class = "content">
       <!-- about me -->
       <section class="page-section" id="about">
-        <h3>About Me</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="jumbotron">
+            <h1 class="display-4">About Me</h1>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <hr class="my-4">
+            <p>Further information and references can be found on my official resume.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Download</a>
+        </div>
       </section>
 
       <!-- portfolio container -->
@@ -56,12 +94,6 @@
           </div>
 
         </div>
-      </section>
-
-      <!-- link to resume -->
-      <section class="page-section" id="resume">
-        <h3>Resume</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </section>
 
       <!-- contact -->
