--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">`
     <!-- own stylesheet -->
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Bootstrap Portfolio: Ele Saltmarsh</title>
   </head>
@@ -18,9 +18,7 @@
 
     <!-- nav bar -->
     <nav class="navbar fixed-top navbar-expand-lg bg-light">
-
         <div class="container-fluid">
-
           <a class="navbar-brand" href="#">
             <img src="./assets/images/Icon.png" width="60" height="60" class="d-inline-block align-middle" alt="ES">
             Ele Saltmarsh
@@ -30,7 +28,6 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -38,7 +35,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="#about">About Me</a>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
+                <a class="nav-link" href="#portfolio">Portfolio</a>
+              </li>
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Portfolio
                 </a>
@@ -48,7 +48,7 @@
                   <li><a class="dropdown-item" href="#pr3">Project 3</a></li>
                   <li><a class="dropdown-item" href="#pr4">Project 4</a></li>
                 </ul>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
@@ -58,56 +58,140 @@
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
-
           </div>
         </div>
-
     </nav>
 
+    <hr class="my-4">
+
     <div class = "content">
-      <!-- about me -->
-      <section class="page-section" id="about">
-        <div class="jumbotron">
+        <!-- about me -->
+        <section id="about">
             <h1 class="display-4">About Me</h1>
+            <img class="self" src="./assets/images/blue.jpg">
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <hr class="my-4">
             <p>Further information and references can be found on my official resume.</p>
             <a class="btn btn-primary btn-lg" href="#" role="button">Download</a>
-        </div>
-      </section>
+        </section>
 
-      <!-- portfolio container -->
-      <section class="page-section" id="portfolio">
-        <h3>Portfolio</h3>
-        <div id="content-grid">
-          <div class = "work" id = "pr1">
-            <p>Application 1</p>
-          </div>
-          <div class = "work" id = "pr2">
-            <p>Application 2</p>
-          </div>
-          <div class = "work" id = "pr3">
-            <p>Application 3</p>
-          </div>
-          <div class = "work" id = "pr4">
-            <p>Application 4</p>
-          </div>
+        <hr class="my-4">
 
-        </div>
-      </section>
+        <!-- portfolio container -->
+        <section id="portfolio">
+            <h1 class="display-4">Portfolio</h1>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <img src="./assets/images/02-portfolio-1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Application 1</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <img src="./assets/images/02-portfolio-2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Application 2</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <img src="./assets/images/02-portfolio-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Application 3</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <img src="./assets/images/02-portfolio-4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Application 4</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-      <!-- contact -->
-      <section class="page-section" id="contact">
-        <h3>Contact Me</h3>
-        <a href="mailto:elesaltmarsh@hotmail.co.uk">✉</a>
-        <a href="https://www.linkedin.com/in/ele-saltmarsh/">LinkedIn</a>
-        <a href="https://github.com/EleSaltmarsh">Github</a>
-      </section>
+            <!-- Carousel display of applications -->
+            <!-- <div id="carouselPortfolio" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselPortfolio" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselPortfolio" data-slide-to="1"></li>
+                    <li data-target="#carouselPortfolio" data-slide-to="2"></li>
+                    <li data-target="#carouselPortfolio" data-slide-to="3"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./assets/images/02-portfolio-1.jpg" class="d-block" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/images/02-portfolio-2.jpg" class="d-block" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/images/02-portfolio-3.jpg" class="d-block" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/images/02-portfolio-4.jpg" class="d-block" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>4th slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselPortfolio" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselPortfolio" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div> -->
+        </section>
+
+        <hr class="my-4">
+
+        <!-- contact -->
+        <section id="contact">
+            <h1 class="display-4">Contact</h1>
+            <a href="mailto:elesaltmarsh@hotmail.co.uk">✉</a>
+            <a href="https://www.linkedin.com/in/ele-saltmarsh/">LinkedIn</a>
+            <a href="https://github.com/EleSaltmarsh">Github</a>
+        </section>
+
     </div>
 
     <footer>
 
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   </body>
 
