--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">`
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- own stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -53,11 +55,6 @@
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
-
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
     </nav>
@@ -65,13 +62,14 @@
     <hr class="my-4">
 
     <div class = "content">
+
         <!-- about me -->
         <section id="about">
-            <h1 class="display-4">About Me</h1>
             <img class="self" src="./assets/images/blue.jpg">
+            <h1 class="display-4">About Me</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p>Further information and references can be found on my official resume.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Download</a>
+            <a class="btn btn-primary btn-lg" download="Resume-Ele-Saltmarsh" href="./assets/Resume.docx" role="button">Download</a>
         </section>
 
         <hr class="my-4">
@@ -79,119 +77,68 @@
         <!-- portfolio container -->
         <section id="portfolio">
             <h1 class="display-4">Portfolio</h1>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <img src="./assets/images/02-portfolio-1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Application 1</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+            <div id="content-grid">
+                <div class="card" id="pr1">
+                    <img src="./assets/images/02-portfolio-1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Application 1</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go 1</a>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <img src="./assets/images/02-portfolio-2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Application 2</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+                <div class = "card" id = "pr2">
+                    <img src="./assets/images/02-portfolio-2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Application 2</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go 2</a>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <img src="./assets/images/02-portfolio-3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Application 3</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+                <div class = "card" id = "pr3">
+                    <img src="./assets/images/02-portfolio-3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Application 3</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go 3</a>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <img src="./assets/images/02-portfolio-4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Application 4</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+                <div class = "card" id = "pr4">
+                    <img src="./assets/images/02-portfolio-4.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Application 4</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go 4</a>
                     </div>
                 </div>
             </div>
 
-            <!-- Carousel display of applications -->
-            <!-- <div id="carouselPortfolio" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselPortfolio" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselPortfolio" data-slide-to="1"></li>
-                    <li data-target="#carouselPortfolio" data-slide-to="2"></li>
-                    <li data-target="#carouselPortfolio" data-slide-to="3"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./assets/images/02-portfolio-1.jpg" class="d-block" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/02-portfolio-2.jpg" class="d-block" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/02-portfolio-3.jpg" class="d-block" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/02-portfolio-4.jpg" class="d-block" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>4th slide label</h5>
-                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselPortfolio" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselPortfolio" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div> -->
+        </section>
+
+        <hr class="my-4">
+
+        <!-- skills -->
+        <section id="skills">
+            <h1 class="display-4">Skills</h1>
+            <ul class="list-group">
+                <li class="list-group-item">Web content creation using HTML</li>
+                <li class="list-group-item">Web layout and design using CSS</li>
+                <li class="list-group-item">Web interactivity using JavaScript</li>
+                <li class="list-group-item">Custom content creation and esign using Adobe Creative Cloud</li>
+                <li class="list-group-item">Backend programming using C, R, Visual Basic, and FORTRAN</li>
+            </ul>
         </section>
 
         <hr class="my-4">
 
         <!-- contact -->
-        <section id="contact">
+        <footer id="contact">
             <h1 class="display-4">Contact</h1>
-            <a href="mailto:elesaltmarsh@hotmail.co.uk">✉</a>
-            <a href="https://www.linkedin.com/in/ele-saltmarsh/">LinkedIn</a>
-            <a href="https://github.com/EleSaltmarsh">Github</a>
-        </section>
+            <a class="fa mail" href="mailto:elesaltmarsh@hotmail.co.uk">✉</a>
+            <a class="fa fa-linkedin" href="https://www.linkedin.com/in/ele-saltmarsh/"></a>
+            <a class="fa fa-github" href="https://github.com/EleSaltmarsh"></a>
+        </footer>
 
     </div>
-
-    <footer>
-
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   </body>
 
